...
    <string name="example_title">Testing</string>
    <string name="example_genre">Comedy</string>
    <string name="example_date">friday, Jun 29, 2017</string>
    <string name="example_rate">7.5</string>

    <string name="title_storyline">Storyline</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>

    <string name="txt_movie_add">Favorite movie added</string>
    <string name="txt_movie_remove">Favorite movie deleted</string>
    <string name="txt_movie_hint">Find movie…</string>
...
